# singularity-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  architecture.md
docs/: Singularity_Architecture_Textbook.md
src/core/: Application.cpp  Application.h  Window.cpp  Window.h  main.cpp
src/editor/: EditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SelectionState.h  StatsPanel.cpp  StatsPanel.h  ViewportPanel.cpp  ViewportPanel.h
